@@ -1,4 +1,6 @@
- $Id: ChangeLog,v 1.10 2006/07/09 13:06:22 mkern Exp $
+ $Id: ChangeLog,v 1.11 2007/01/14 14:29:30 mkern Exp $
+
+	* Added 3 minute periodic stats ping to supernode.
 
 	* Made SHA1 implementation work correctly on 64 bit machines.
 
